Create decorator to to validate requests' inputs
