# app/blueprints/admin/controllers/admin_tasks_controller.py
@@ -1,7 +1,7 @@
 """
 Blueprint for the administrative tasks of the system
 """
-from flask import Blueprint, jsonify, request, make_response
+from flask import Blueprint, jsonify, request
 
 from app.blueprints.admin.services import admin_tasks_service
 from app.authorisation.decorators import admin_token_required
@@ -16,3 +16,9 @@ def delete_all_jobs_by_type():
     job_type = form_data.get('job_type')
     operation_result = admin_tasks_service.delete_all_jobs_by_type(job_type)
     return jsonify({'operation_result': operation_result})
+
+@ADMIN_TASKS_BLUEPRINT.route('/delete_output_files_for_job/<job_id>', methods = ['GET'])
+@admin_token_required
+def delete_output_files_for_job(job_id):
+
+    return jsonify({'operation_result': 'success!'})
